Restructure json into extern dir

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -31,8 +31,9 @@ if (${MACOSX})
     include_directories(eigen3)
 endif()
 
-# Include dir
+# Include dirs
 include_directories(include)
+include_directories(extern)
 
 # Sources
 list(APPEND CAMERA_SOURCES
@@ -44,8 +45,9 @@ list(APPEND RECONSTRUCT_3D_SOURCES
         src/reconstruct/Reconstruct3D.cpp
 )
 
-list(APPEND OTHER_SOURCES
-        include/nlohmann/json.hpp
+# External sources
+list(APPEND EXTERN_SOURCES
+        extern/nlohmann/json.hpp
 )
 
 # Executables
@@ -55,5 +57,5 @@ add_executable(camera_compute_test src/test/camera_compute_test.cpp ${CAMERA_SOU
 target_link_libraries(camera_compute_test ${OpenCV_LIBS} ${Boost_LIBRARIES})
 
 # Reconstruct module test
-add_executable(reconstruct_test src/test/reconstruct_test.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${OTHER_SOURCES})
+add_executable(reconstruct_test src/test/reconstruct_test.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${EXTERN_SOURCES})
 target_link_libraries(reconstruct_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
