Added catch2 unit testing and test for camera calib parse

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -50,6 +50,11 @@ list(APPEND EXTERN_SOURCES
         extern/nlohmann/json.hpp
 )
 
+# Testing sources
+list(APPEND TESTING_SOURCES
+        extern/catch2/catch.hpp
+)
+
 # Executables
 
 # Camera compute module test
@@ -59,3 +64,7 @@ target_link_libraries(camera_compute_test ${OpenCV_LIBS} ${Boost_LIBRARIES})
 # Reconstruct module test
 add_executable(reconstruct_test src/test/reconstruct_test.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${EXTERN_SOURCES})
 target_link_libraries(reconstruct_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
+
+# Tests
+add_executable(test_camera_calib_parser test/test_camera_calib_parser.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${EXTERN_SOURCES} ${TESTING_SOURCES})
+target_link_libraries(test_camera_calib_parser ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
