--- a/kitti_vision_streamer/CMakeLists.txt
+++ b/kitti_vision_streamer/CMakeLists.txt
@@ -20,6 +20,10 @@ include_directories(${Boost_INCLUDE_DIR})
 # Eigen3
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 
+# LibCV Networking (Custom networking layer)
+set(LIB_CV_NETWORKING "../network_protocol/release/libcv_networking.a" CACHE PATH "The file path to the libcv_networking library")
+set(LIB_CV_NETWORKING_INCLUDE_DIR "../network_protocol/include" CACHE PATH "The path of the include folder of the libcv_networking library")
+
 # Includes for eigen for MacOS
 if (${MACOSX})
     include_directories(eigen3)
@@ -27,11 +31,11 @@ endif()
 
 # Include dirs
 include_directories(include)
-
+include_directories(${LIB_CV_NETWORKING_INCLUDE_DIR})
 
 # Executables
 
 # Main executable
 add_executable(${PROJECT_NAME} src/main.cpp src/KITTIVisionParser.cpp)
-target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} ${Boost_LIBRARIES} ${CMAKE_SOURCE_DIR}/${LIB_CV_NETWORKING})
 
