--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,7 @@ project(master_thesis)
 set(CMAKE_CXX_STANDARD 14)
 
 # sub-projects for each component and module
+
 add_subdirectory(kitti_vision_streamer)
 add_subdirectory(network_protocol)
+add_subdirectory(cv_reconstruct)
