Created executable for reconstruction server

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -44,6 +44,7 @@ list(APPEND CAMERA_SOURCES
 list(APPEND RECONSTRUCT_3D_SOURCES
         src/reconstruct/Reconstruct3D.cpp
         src/reconstruct/ReconstructionServer.cpp
+        src/config/ConfigParser.cpp
 )
 
 # External sources
