--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -43,6 +43,7 @@ list(APPEND CAMERA_SOURCES
 
 list(APPEND RECONSTRUCT_3D_SOURCES
         src/reconstruct/Reconstruct3D.cpp
+        src/reconstruct/Localizer.cpp
 )
 
 list(APPEND SERVER_SOURCES
