Refactored test programs

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -77,12 +77,16 @@ add_executable(cv_server src/main.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES
 target_link_libraries(cv_server ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES} reconstruction::networking)
 
 # Reconstruct module test program
-add_executable(reconstruct_test src/test/reconstruct_test_kitti_rectified.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${PIPELINE_SOURCES} ${EXTERN_SOURCES})
+add_executable(reconstruct_test src/test/reconstruct_test_kitti_rectified.cpp src/test/tests_common.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${PIPELINE_SOURCES} ${EXTERN_SOURCES})
 target_link_libraries(reconstruct_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
 
 # Localization module test program
-add_executable(localization_test src/test/localization_test_kitti.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${PIPELINE_SOURCES} ${EXTERN_SOURCES})
+add_executable(localization_test src/test/localization_test_kitti.cpp src/test/tests_common.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${PIPELINE_SOURCES} ${EXTERN_SOURCES})
 target_link_libraries(localization_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
+
+# Pipeline module test program
+add_executable(pipeline_test src/test/pipeline_test.cpp ${CAMERA_SOURCES} src/test/tests_common.cpp ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${PIPELINE_SOURCES} ${EXTERN_SOURCES})
+target_link_libraries(pipeline_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
 
 # Catch2 Tests
 add_executable(test_camera_calib_parser test/test_camera_calib_parser.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${EXTERN_SOURCES} ${TESTING_SOURCES})
