Added user interface and refactored server to be multi-threaded

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -50,6 +50,7 @@ list(APPEND RECONSTRUCT_3D_SOURCES
 list(APPEND SERVER_SOURCES
         src/server/ReconstructionServer.cpp
         src/server/MessageConverter.cpp
+        src/server/ServerUserInterface.cpp
 )
 
 list(APPEND CONFIG_SOURCES
