--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -121,6 +121,17 @@ add_executable(pipeline_test src/test/pipeline_test.cpp src/test/tests_common.cp
 )
 target_link_libraries(pipeline_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
 
+# Feature extraction module test program
+add_executable(feature_extract_test src/test/feature_extraction_test.cpp src/test/tests_common.cpp
+        ${CAMERA_SOURCES}
+        ${RECONSTRUCT_3D_SOURCES}
+        ${CONFIG_SOURCES}
+        ${PIPELINE_SOURCES}
+        ${POINT_CLOUD_SOURCES}
+        ${EXTERN_SOURCES}
+)
+target_link_libraries(feature_extract_test ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
+
 # Catch2 Tests
 add_executable(test_camera_calib_parser test/test_camera_calib_parser.cpp ${CAMERA_SOURCES} ${RECONSTRUCT_3D_SOURCES} ${CONFIG_SOURCES} ${EXTERN_SOURCES} ${TESTING_SOURCES})
 target_link_libraries(test_camera_calib_parser ${OpenCV_LIBS} ${Boost_LIBRARIES} ${PCL_LIBRARIES})
