Added 2D keypoint detection to 3D correspondence technique

--- a/cv_reconstruct/CMakeLists.txt
+++ b/cv_reconstruct/CMakeLists.txt
@@ -49,6 +49,7 @@ list(APPEND RECONSTRUCT_3D_SOURCES
 list(APPEND POINT_CLOUD_SOURCES
         src/point_cloud/PointCloudPostProcessor.cpp
         src/point_cloud/FeatureExtractor.cpp
+        src/point_cloud/PointCloudRegistration.cpp
 )
 
 list(APPEND SERVER_SOURCES
