--- a/cv_reconstruct/resources/config/config_default.json
+++ b/cv_reconstruct/resources/config/config_default.json
@@ -6,8 +6,19 @@
     "reconstruction": {
       "requires_rectification": false,
       "block_matcher": "stereo_bm",
-      "window_size": 27,
-      "num_disparities": 128
+      "SBM": {
+        "window_size": 27,
+        "num_disparities": 128
+      },
+      "SGBM": {
+        "block_size": 27,
+        "num_disparities": 128,
+        "uniqueness_ratio": 10,
+        "speckle_range": 2,
+        "speckle_window_size": 100,
+        "pre_filter_cap": 10,
+        "min_disparity": 0.0
+      }
     },
     "point_cloud_post_processing": {
       "outlier_min_k": 30,
@@ -20,7 +31,7 @@
         "max_iterations": 20,
         "ransac_iterations": 20,
         "transformation_epsilon": 1e-8,
-        "euclidean_fitness_epsilon": 1.0
+        "euclidean_fitness_epsilon": 0.01
       }
     },
     "point_cloud_feature_detection": {
