--- a/.gitignore
+++ b/.gitignore
@@ -1459,3 +1459,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# Visual Studio CMake
+CMakeSettings.json
